--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
+appnope==0.1.0
+backports.shutil-get-terminal-size==1.0.0
 Click==7.0
+decorator==4.3.0
+enum34==1.1.6
 Flask==1.0.2
+ipdb==0.11
+ipython==5.8.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+pathlib2==2.3.3
+pexpect==4.6.0
+pickleshare==0.7.5
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
+Pygments==2.3.0
+PyYAML==3.13
+scandir==1.9.0
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
+ua-parser==0.8.0
+user-agents==1.1.0
+wcwidth==0.1.7
 Werkzeug==0.14.1
